# testPilot

./: .gitignore  README.md  auth.py  pyproject.toml  requirements.txt  test.py  testpilot.toml
examples/: calculator.py  numberChecker.py
testpilot/: __init__.py  main.py
testpilot/commands/: __init__.py  bug_find.py  coverage.py  explain.py  generate.py  manual_report.py  report.py  review.py  run.py
testpilot/services/: __init__.py  generator_service.py  manual_report_service.py  openai_service.py  report_service.py  runner_service.py
testpilot/utils/: __init__.py  config.py  console.py  file_analyzer.py  file_helper.py
tests/: test_calculator.py  test_numberChecker.py  test_test.py
