[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "testpilot"
version = "0.1.0"
description = "Professional Python test case generator and runner."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
testpilot = "testpilot.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["testpilot*"]
